[package]
name = "island_map"
version = "0.1.0"
authors = ["Travis Veazey <travisvz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_xoshiro = "0.6.0"
image = "0.23.14"
imageproc = "0.22.0"
noise = "0.7.0"
delaunator = "0.2.0"
